# test-cql

./: main.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
