[tool.poetry]
name = "test-cql"
version = "0.1.0"
description = ""
authors = ["Aleksandra Indulska <aleksandra.indulska@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
